--- a/Bloc C# y Java/Practica Troncal/A4 WPFApp/A4WPFApp/A4.DAL/A4.DAL.csproj
+++ b/Bloc C# y Java/Practica Troncal/A4 WPFApp/A4WPFApp/A4.DAL/A4.DAL.csproj
@@ -16,6 +16,9 @@
     <Reference Include="A4.Lib">
       <HintPath>..\A4.Lib\bin\Debug\netstandard2.0\A4.Lib.dll</HintPath>
     </Reference>
+    <Reference Include="Common.Lib">
+      <HintPath>..\..\Common.Lib\Common.Lib\bin\Debug\netstandard2.0\Common.Lib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
