--- a/Bloc C# y Java/Practica Troncal/A4 WPFApp/A4WPFApp/A4WPFApp/A4WPFApp.csproj
+++ b/Bloc C# y Java/Practica Troncal/A4 WPFApp/A4WPFApp/A4WPFApp/A4WPFApp.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +23,12 @@
     <Reference Include="A4.DAL">
       <HintPath>..\A4.DAL\bin\Debug\netstandard2.1\A4.DAL.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
